# vllm-lens

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PR_DESCRIPTION.md  README.md  pyproject.toml
.claude/skills/scientific-debug/: SKILL.md
.github/workflows/: checks.yaml  release.yaml
docs/jacobian_lens/: make_token_grid.py
docs/jacobian_lens/scale_up/: README.md
examples/: _make_synthetic_lens.py  _pp_compare.py  _utils.py  activation_oracle.py  attention_patterns.py  bench_session_vs_per_request.py  causal_tracing.py  deception_probe.py  emotion_tracker.py  extract_residual_stream.ipynb  fit_jacobian_fsdp.py  inspect-demo.ipynb  jacobian_lens.py  jacobian_lens_chat.html  jacobian_lens_chat.py  jacobian_lens_fit.py  jacobian_lens_fit_env.sh  logit_lens.py
examples/accelerate_configs/: fsdp.yaml
examples/tests/: conftest.py  test_activation_oracle.py
tests/: conftest.py  test_client.py  test_persistent_hooks.py  test_server.py
vllm_lens/: __init__.py  _activations_plugin.py  _hooks_router.py  _worker_ext.py  attention.py  client.py  inspect_provider.py
vllm_lens/_benchmarks/: README.md  hf_transformers_bm.py  nnsight_transformers_bm.py  nnsight_vllm_bm.py  nnterp_bm.py  pure_vllm_bm.py  ray.slurm  results.ipynb  run_all.py  transformer_lens_bm.py  vllm_lens_bm.py
vllm_lens/_benchmarks/utils/: types.py
vllm_lens/_examples/: _induction_ground_truth.py  _induction_prompts.py  _utils.py  bench_session_vs_per_request.py  benchmark.ipynb  causal_tracing.py  deception_probe.py  emotion_tracker.html  emotion_tracker.py  extract_residual_stream.ipynb  induction_circuits.py  inspect-demo.ipynb  logit_lens.py  persistent_extract_residual_stream.py
vllm_lens/_examples/tests/: test_activation_oracle.py  test_induction_circuits.py
vllm_lens/_examples/tests/utils/: original_demo_activations.pt
vllm_lens/_helpers/: _serialize.py  types.py
vllm_lens/tests/: conftest.py  test_activations_chunked_prefill.py  test_activations_cross_api.py  test_activations_match.py  test_activations_offline.py  test_activations_ordered.py  test_activations_pp.py  test_attention_helper.py  test_layer_discovery.py  test_qk_chunked_prefill.py  test_qk_match.py  test_qk_merge.py  test_qk_parallel.py  test_serialize.py  test_steering.py  test_steering_offline.py
vllm_lens/tests/__snapshots__/: test_activations_match.ambr
